# OpenReferenceFolder

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: application.cpp  application.h  main.cpp
src/app/model/: database.cpp  database.h  orf_node.h
src/app/thumbnail/: thumbnail_cache.cpp  thumbnail_cache.h
src/app/widgets/: display_center_widget.cpp  display_center_widget.h  file_browser_widget.cpp  file_browser_widget.h
src/framework/core/: framework.cpp  log.h
src/framework/docking/: dock_manager.cpp  dock_manager.h  dock_node.cpp  dock_node.h  floating_window.cpp  floating_window.h  panel_node.cpp  panel_node.h  split_node.cpp  split_node.h  tab_group_node.cpp  tab_group_node.h
src/framework/renderer/: font.cpp  font.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h
src/framework/theme/: theme.h  theme_manager.cpp  theme_manager.h
src/framework/widgets/: button.cpp  button.h  context_menu.cpp  context_menu.h  label.cpp  label.h  panel.cpp  panel.h  root_widget.cpp  root_widget.h  scroll_view.cpp  scroll_view.h  widget.cpp  widget.h
src/platform/: file_dialog.h
src/platform/macos/: file_dialog.mm
